# learn-python

./: .gitignore  1_class_dataTypes.ipynb  1_class_dataTypes.py  2_class_string.ipynb  3_class_operators.ipynb  de.php  ind.php  readme.md
01_class_dataTypes/: 1_class_dataTypes.ipynb  readme.md
02_class(string_fstring)/: 2_class_fstring.ipynb
03_class(operators)/: 3_class_operators.ipynb  3_class_operators.py  readme.md
04_list_methods/: 04_list_methods.ipynb
05_list_tuple_for_loop/: 05_list_tuple_for_loop.ipynb
06_if-else-elif,tuple,zip/: 06_if_else.ipynb  detect.ipynb  readme.md
GenerativeAI/Session-1/: Generative AI for - Session 1.md
GenerativeAI/Session-2/: GenerativeAI.md
GenerativeAI/Session-2/langchain/: package-lock.json  package.json  tsconfig.json
GenerativeAI/Session-2/langchain/src/: app.ts
GenerativeAI/Session-3/02-python chatgpt Code/: 01-guidelines.ipynb  09_max_tokens.ipynb
learn-agentic-ai/00_ai_api/: gemini2_api.ipynb  readme.md
learn-agentic-ai/00_markdown/: readme.md
learn-agentic-ai/00_openai_agents/00_uv/01_project/explore-uv/: pyproject.toml
python/02_class(string_fstring)/: readme.md
python/03_class(operators)/: 3_class_operators.ipynb
python/04_list_methods/: readme.md
python/05_list_tuple_for_loop/: readme.md
python/06_if-else-elif,tuple,zip/: if_elif.py
python/07_class(Dictionary)/: class7.ipynb  readme.md
python/08_class(dictionary)/: class8.ipynb  readme.md
python/09_class(loop_input)/: class9.ipynb  class9.py  readme.md
python/10_class(functions-lambda-decorators)/: class10.ipynb
