[project]
name = "explore-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ghani-ds", email = "153816946+ghani-ds@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
explore-uv = "explore_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
